# face-id

./: .gitignore  DEMARRAGE.md  Dockerfile  LICENSE  README.md  app_simple.py  config.yaml  demo.py  demo_video.py  docker-compose.yml  install.bat  install.ps1  main.py  main_simple.py  pyproject.toml  quick_start.py  requirements.txt  test_api.py  test_api_simple.py
app/api/: dependencies.py  endpoints.py
app/core/: config_simple.py  face_engine.py  face_engine_simple.py
app/models/: schemas.py
app/services/: database.py  tracking.py
scripts/: calibrate_threshold.py  identify_image.py  identify_video.py  index_people.py
scripts/utils/: __init__.py  face_engine.py  index_store.py  tracking.py
tests/: test_utils.py
web/static/js/: app.js
web/templates/: index.html
